# PayloadSdk

./: .gitignore  .gitmodules  CMakeLists.txt  PayloadSDK.md  README.md  camera_change_settings.py  camera_do_setzoom_individual.py  camera_eo_capture_image.py  camera_eo_record_video.py  camera_eo_set_zoom_focus.py  camera_ir_capture_image.py  camera_ir_do_ffc_control.py  camera_ir_record_video.py  camera_ir_set_isotherms.py  camera_ir_set_palette.py  camera_ir_set_zoom.py  camera_load_settings.py  camera_time_lapse_photography.py  check_connect.py  gimbal_change_settings.py  gimbal_do_calib.py  gimbal_load_settings.py  gimbal_move_angle.py  gimbal_move_speed.py  gimbal_set_mode.py  package.xml  payload_do_object_detection.py  payload_do_object_tracking.py  payload_download_media_files.py  payload_format_sdcard.py  payload_get_status.py  payload_get_video_streaming.py  payload_set_gps.py  payload_set_system_time.py  requirements.txt
config/: config_uav.yaml  config_uav2.yaml
document/scripts/: run_demo_project.sh  sample_project.service  set_static_ip.sh
examples/: CMakeLists.txt  camera_change_settings.py  camera_do_setzoom_individual.cpp  camera_do_setzoom_individual.py  camera_eo_capture_image.cpp  camera_eo_capture_image.py  camera_eo_record_video.cpp  camera_eo_record_video.py  camera_eo_set_shutter_speed.cpp  camera_eo_set_shutter_speed.py  camera_eo_set_zoom_focus.cpp  camera_eo_set_zoom_focus.py  camera_eo_trigger_wb_onepush.cpp  camera_ir_capture_image.cpp  camera_ir_capture_image.py  camera_ir_do_ffc_control.cpp  camera_ir_do_ffc_control.py  camera_ir_isotherm_profile.cpp  camera_ir_record_video.cpp  camera_ir_record_video.py  camera_ir_set_isotherms.py  camera_ir_set_palette.cpp  camera_ir_set_palette.py  camera_ir_set_zoom.py  camera_load_settings.cpp  camera_load_settings.py  camera_time_lapse_photography.cpp  camera_time_lapse_photography.py  capture_image.cpp  change_payload_settings.cpp  check_connect.cpp  check_connect.py  connect.cpp  do_calib_gimbal.cpp  do_ir_ffc_control.cpp  do_object_detection.cpp  do_object_tracking.cpp  do_setzoom_individual.cpp  download_media_files.cpp  eo_capture_image.cpp  (+59 more)
examples/1._Connect_to_Payload/: CMakeLists.txt
examples/10._Set_Camera_Zoom_Focus/: CMakeLists.txt  set_camera_zoom_focus.cpp
examples/11._Download_Payload_Meida/: CMakeLists.txt  README.md
examples/2._Load_Payload_Settings/: CMakeLists.txt
examples/3._Set_Payload_Settings/: CMakeLists.txt  set_payload_settings.cpp
examples/4._Capture_Image/: CMakeLists.txt
examples/5._Record_Video/: CMakeLists.txt
examples/6._Get_Video_Streaming/: CMakeLists.txt
examples/7._Gimbal_Set_Mode/: CMakeLists.txt  gimbal_set_mode.cpp
examples/7._Move_Gimbal_SpeedMode/: CMakeLists.txt  move_gimbal_speed_mode.cpp
examples/8._Move_Gimbal_AngleMode/: CMakeLists.txt  move_gimbal_angle_mode.cpp
examples/9._Download_Payload_Meida/: download_payload_media.cpp
examples/9._Get_Status_Gimbal/: CMakeLists.txt  get_status_gimbal.cpp
include/gremsy_ros2/: gremsy_base_node.hpp
launch/: gimbal_launch.py  gremsy_gimbal.launch.py
libs/: CMakeLists.txt  check_connect.py  config.py  enum_base.py  mavlink_msg_param_ext_value.py  payloadSdkInterface.cpp  payloadSdkInterface.h  payload_define.py  payload_enum.h  payload_sdk.py  payloadsdk.h
libs/aarch64/: payloadsdk.h
libs/aarch64/payload-define/: vio_sdk.h  zio_sdk.h
libs/mavlinkInterface/: .gitignore  CMakeLists.txt  README.md
libs/mavlinkInterface/libs/: CMakeLists.txt
libs/mavlinkInterface/libs/inc/: generic_port.h  mavlink_interface.h  serial_port_mav.h  udp_port.h  user_mavlink_common.h
libs/mavlinkInterface/libs/inc/mavlink/v2.0/: mavlink_helpers.h
libs/mavlinkInterface/libs/src/: mavlink_interface.cpp  serial_port_mav.cpp  udp_port.cpp
libs/mavlinkInterface/tests/: CMakeLists.txt  mavlinklib_test.cpp  mavlinklib_test.h
libs/payload-define/: ghadron_sdk.h  mb1_sdk.h  orusl_sdk.h  vio_sdk.h  zio_sdk.h
libs/x86_64/: payloadSdkInterface.h  payloadsdk.h
libs/x86_64/payload-define/: ghadron_sdk.h  vio_sdk.h
sample_project/demo_project/: CMakeLists.txt  README.md  main.cpp
sample_project/demo_project/include/: main.h
src/: CMakeLists.txt  gremsy_align_node.cpp  gremsy_camera_move_node.cpp  gremsy_camera_stream_ir.cpp  gremsy_camera_stream_node.cpp  gremsy_gimbal_node.cpp  gremsy_heading_follower.cpp  gremsy_ros2_interface_node.cpp  payloadSdkInterface.cpp  payloadSdkInterface.h  payloadsdk.h
src/examples/1._Connect_to_Payload/: CMakeLists.txt  connect.cpp
src/examples/2._Load_Payload_Settings/: CMakeLists.txt  load_payload_settings.cpp
src/examples/3._Set_Payload_Settings/: CMakeLists.txt  set_payload_settings.cpp
src/examples/4._Capture_Image/: CMakeLists.txt  capture_image.cpp
src/examples/5._Record_Video/: CMakeLists.txt  record_video.cpp
src/examples/6._Get_Video_Streaming/: CMakeLists.txt  get_video_streaming.cpp
tests/demo_project/: CMakeLists.txt  README.md  main.cpp
tests/demo_project/include/: log.h  main.h
tests/ghadron_project/: CMakeLists.txt  main.cpp
tests/ghadron_project/include/: main.h
tests/mb1_project/: CMakeLists.txt  main.cpp
tests/mb1_project/include/: log.h  main.h
tests/parse_thermal_stream/: CMakeLists.txt  README.md  main.cpp  main.h
tests/ui_demo/: CMakeLists.txt  main.cpp  main.h
tests/ui_demo/ui_gtk/: MainWindow.cpp  MainWindow.h
tests/ui_demo/ui_gtk/PayloadControlTab/: PayloadSettingsTab.cpp  PayloadSettingsTab.h
